--- a/daka-frontend/src/styles/index.css
+++ b/daka-frontend/src/styles/index.css
@@ -14,3 +14,30 @@ body {
 #main_page_salary_guides {
     background-image: url("../assets/images/Salary_Guides_Main_Page.jpg");
 } 
+
+#GredTreeWorking {
+    position: relative;
+    width: 100%;
+    background-image: url("../assets/images/why-jobber/GregTreeWorker.webp");
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+}
+
+#GredTreeWorkingOverlay {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(1, 41, 57, 0.6);
+}
+
+#GredTreeWorkingContent { 
+    position: relative;
+    z-index: 2;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
